2012-24-10  Alexey S. Denisov
	* main/Flow/CarefulDatabaseRunner.class.php
		main/UnifiedContainer/UnifiedContainer.class.php:
			CarefulDatabaseRunner and UnifiedContainer will use InnerTransaction

2012-24-10  Alexey S. Denisov
	* global.inc.php.tpl
		main/Autoloader/Autoloader.class.php
		main/Autoloader/AutoloaderClassNotFound.class.php
		main/Autoloader/AutoloaderClassPathCache.class.php
		main/Autoloader/AutoloaderNoCache.class.php
		main/Autoloader/AutoloaderPool.class.php
		main/Autoloader/AutoloaderRecachable.class.php
		main/Autoloader/AutoloaderWithNamespace.class.php
		main/Autoloader/NamespaceDirScaner.class.php
		main/Autoloader/NamespaceDirScanerOnPHP.class.php
		main/Autoloader/NamespaceDirScanerPSR0.class.php
		main/Autoloader/NamespaceResolver.class.php
		main/Autoloader/NamespaceResolverOnPHP.class.php
		main/Autoloader/NamespaceResolverPSR0.class.php
		main/Autoloader/require.inc.php
		meta/bin/build.php
		meta/classes/MetaConfiguration.class.php
		misc/Autoloader.inc.php
		misc/BaseException.inc.php:
			New Autoloader which work without include_paths and use optional namespaces

2012-09-29	Alexey S. Denisov

	* core/DB/DB.class.php
		core/DB/Dialect.class.php
		core/DB/ImaginaryDialect.class.php
		core/DB/LiteDialect.class.php
		core/DB/LitePDODialect.class.php
		core/DB/MyDialect.class.php
		core/DB/MyImprovedDialect.class.php
		core/DB/MySQL.class.php
		core/DB/MySQLim.class.php
		core/DB/PgSQL.class.php
		core/DB/PostgresDialect.class.php
		core/DB/SQLite.class.php
		core/DB/SQLitePDO.class.php:
			Dialects not Singletons now. Some methods now unstatic and they use DB for correct quoting

2012-09-26	Alexey S. Denisov

	* core/Form/Form.class.php:
		added to Form methods markMissing, markWrong, markCustom
		optional argument "label" to set it without calling special method add*Label

2012-09-19	Evgeny V. Kokovikhin

	* main/Monitoring/PinbedMemcached.class.php: cosmetics

2012-09-18      Evgeniy Tekalin

	* main/Utils/AMQP/AMQP.class.php,