@@ -1,9 +1,14 @@
-2012-24-10  Alexey S. Denisov
+2012-11-18  Nikita V. Konstantinov
+	* meta/types/ObjectType.class.php:
+		update for Business objects - now you can setSomeProperty(null)
+		for Objects properties if it's not required
+
+2012-10-24  Alexey S. Denisov
 	* main/Flow/CarefulDatabaseRunner.class.php
 		main/UnifiedContainer/UnifiedContainer.class.php:
 			CarefulDatabaseRunner and UnifiedContainer will use InnerTransaction
 
-2012-24-10  Alexey S. Denisov
+2012-10-24  Alexey S. Denisov
 	* global.inc.php.tpl
 		main/Autoloader/Autoloader.class.php
 		main/Autoloader/AutoloaderClassNotFound.class.php
